finaliza delete post
